templates/environment-variable.yaml
# Environment variable
# - Saat kita membuat aplikasi, sering kali kita butuh data konfigurasi
# - Agar dinamis, disarankan konfigurasi disimpan di environment, sehingga bisa diubah - ubah
# - Kubernetes juga mendukung environment variable untuk Pod
# - Hal ini sangat berguna untuk konfigurasi aplikasi, seperti konfigurasi database, dan lain - lain

apiVersion: v1
kind: Pod
metadata:
  name: pod-name
  labels:
    label-key1: label-value1
    label-key2: label-value2
    label-key3: label-value3
spec:
  containers:
    - name: container-name
      image: image-name
      ports:
        - containerPort: 80
