templates/pod-with-label.yaml
# Kenapa butuh label ?
# - Untuk memberi tanda pada pod
# - Untuk mengorganisir pod
# - Memberi informasi tambahan pada pod
# - Label tidak hanya bisa digunakan pada pod, tapi pada semua resource di Kubernetes, seperti replication controller, replica set, service, dan lain - lain

# Menambahkan label di pod
# - kubectl create -f filename.yaml
# - kubectl get pod --show-labels

# Menambah atau mengubah label di pod
# - kubectl label pod podname key=value
# - kubectl label pod podname key=value --overwrite

apiVersion: v1
kind: Pod
metadata:
  name: pod-name
  labels:
    label-key1: label-value1
    label-key2: label-value2
    label-key3: label-value3
spec:
  containers:
    - name: container-name
      image: image-name
      ports:
        containerPort: 80
