templates/pod.yaml
# Apa itu pod ?
# - Pod adalah unit terkecil yang bisa di deploy di Kubernetes cluster
# - Pod berisi satu atau lebih container
# - Secara sederhana pod adalah aplikasi kita yang running di Kubernetes cluster

# Membuat pod
# - kubectl create -f filename.yaml

# Melihat pod
# - kubectl get pod
# - kubectl get pod -o wide
# - kubectl describe pod podname

# Mengakses pod
# - kubectl port-forward podname portAkses:portPod

# Menghapus pod
# - kubectl delete pod podname
# - kubectl delete pod podname1 podname2 podname3

apiVersion: v1
kind: Pod
metadata: 
  name: pod-name
spec:
  containers:
    - name: container-name
      image: image-name
      ports:
        containerPort: 80
