templates/service-with-domain.yaml
# Apa itu external service ?
# - Biasanya service digunakan sebagai gateway untuk internal Pod
# - Tapi service juga bisa digunakan sebagai gateway untuk aplikasi eksternal yang berada diluar kubernetes cluster

# Melihat service endpoint
# - kubectl describe service servicename
# - kubectl get endpoints servicename

apiVersion: v1
kind: Service
metadata:
  name: external-service
  labels:
    label-key1: label-value1
spec:
  type: ExternalName
  externalName: example.com
  ports:
    - port: 80
