templates/service-with-endpoint.yaml
# Apa itu external service ?
# - Biasanya service digunakan sebagai gateway untuk internal Pod
# - Tapi service juga bisa digunakan sebagai gateway untuk aplikasi eksternal yang berada diluar kubernetes cluster

# Melihat service endpoint
# - kubectl describe service servicename
# - kubectl get endpoints servicename

apiVersion: v1
kind: Service
metadata:
  name: external-service
  labels:
    label-key1: label-value1
spec:
  ports:
    - port: 80

---

apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
  labels:
    label-key1: label-value1
subsets:
  - addresses:
      - ip: 11.11.11.11
      - ip: 22.22.22.22
    ports:
      - port: 80
