templates/service-with-ingress.yaml
# Mengekspos service
# - Kadang ada kebutuhan kita perlu untuk mengekspos service keluar
# - Tujuannya adalah agar aplikasi dari luar kubernetes cluster bisa mengakses Pod yang berada di belakang service tersebut

# Tipe service
# Service memiliki beberapa tipe, yaitu:
# - CluserIp: Mengekspos service di dalam internal kubernetes cluster
# - ExternalName: Memetakan service ke externalName (misalnya: example.com)
# - NodePort: Mengekspos service pada setiap IP node dan port yang sama. Kita dapat mengakses service dengan tipe ini, dari luar cluster melalui <NodeIP>:<NodePort>
# - LoadBalancer: Mengekspos service secara eksternal dengan menggunakan LoadBalancer yang disediakan oleh penyedia layanan cloud

# Cara untuk mengekspos service
# - Dengan menggunakan NodePort, sehingga Node akan membuka port yang akan meneruskan request ke service yang dituju
# - Dengan menggunakan LoadBalancer, sehingga service bisa diakses via LoadBalancer, dan LoadBalancer akan meneruskan request ke NodePort dan dilanjutkan ke service
# - Menggunakan ingress, dimana ingress adalah resource yang memang ditujukan untuk mengekspos service. Namun ingress hanya beroperasi di level HTTP

# Masalah saat mengekspos service
# - Jika menggunakan NodePort
#   - Maka semua node harus terekspos ke public
#   - Client harus tau semua ip address semua node
# - Jika menggunakan LoadBalancer
#   - Maka semua LoadBalancer harus terekspos ke public
#   - Client harus tau semua ip address semua LoadBalancer

# Apa itu ingress ?
# - Ingress adalah salah satu cara yang bisa digunakan untuk mengekspos service
# - Berbeda dengan load balancer atau node port, jika menggunakan ingress, client hanya butuh tahu satu lokasi ip address ingress
# - Ketika client melakukan request ke ingress, pemilihan service nya ditentukan menggunakan hostname dari request
# - Ingress hanya mendukung protocol HTTP

# Menjalankan ingress di minikube
# - minikube addons list
# - minikube addons enable ingress
# - kubectl get pods --namespace kube-system

# Membuat ingress
# - kubectl create -f filename.yaml

# Melihat ingress
# - kubectl get ingresses

# Menghapus ingress
# - kubectl delete ingress ingressname

# Melihat ip minikube
# - minikube ip

# Setting host
# Edit sistem operasi hosts file
# - yoursub.domain.com minikubeip

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-name
  labels:
    label-key1: label-value1
spec:
  rules:
    - host: sub.domain.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: service-name
                port: 
                  number: 80
